--- a/gpt-vs-llama.ipynb
+++ b/gpt-vs-llama.ipynb
@@ -7,24 +7,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import GPT4Model, GPT4Tokenizer\n",
     "import faiss\n",
     "import numpy as np\n",
+    "from transformers import GPT4Model, GPT4Tokenizer\n",
     "\n",
     "# Load model and tokenizer\n",
-    "tokenizer = GPT4Tokenizer.from_pretrained('gpt-4')\n",
-    "model = GPT4Model.from_pretrained('gpt-4')\n",
+    "tokenizer = GPT4Tokenizer.from_pretrained(\"gpt-4\")\n",
+    "model = GPT4Model.from_pretrained(\"gpt-4\")\n",
     "\n",
     "# Setup FAISS index (example with dummy data)\n",
     "index = faiss.IndexFlatL2(128)\n",
-    "data = np.random.random((100, 128)).astype('float32')\n",
+    "data = np.random.random((100, 128)).astype(\"float32\")\n",
     "index.add(data)\n",
+    "\n",
     "\n",
     "def retrieve(query):\n",
     "    # Convert query to vector and retrieve from index\n",
-    "    query_vector = np.random.random((1, 128)).astype('float32')  # Dummy vector\n",
+    "    query_vector = np.random.random((1, 128)).astype(\"float32\")  # Dummy vector\n",
     "    D, I = index.search(query_vector, 5)\n",
     "    return I\n",
+    "\n",
     "\n",
     "def generate_response(query, retrieved_docs):\n",
     "    # Combine query with retrieved documents\n",
@@ -34,11 +36,12 @@
     "    response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "    return response\n",
     "\n",
+    "\n",
     "# Example usage\n",
     "query = \"What is the optimal number of packages I can include in the truck?\"\n",
     "retrieved_docs = retrieve(query)  # Dummy retrieval\n",
     "response = generate_response(query, retrieved_docs)\n",
-    "print(response)\n"
+    "print(response)"
    ]
   },
   {
@@ -50,13 +53,11 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "client = OpenAI(\n",
-    "  api_key=''  # this is also the default, it can be omitted\n",
-    ")\n",
+    "client = OpenAI(api_key=\"\")  # this is also the default, it can be omitted\n",
     "\n",
-    "completion = client.completions.create(model='curie')\n",
+    "completion = client.completions.create(model=\"curie\")\n",
     "print(completion.choices[0].text)\n",
-    "print(dict(completion).get('usage'))\n",
+    "print(dict(completion).get(\"usage\"))\n",
     "print(completion.model_dump_json(indent=2))"
    ]
   },
