--- a/gpt-vs-llama.ipynb
+++ b/gpt-vs-llama.ipynb
@@ -3,62 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a09752-0974-43e1-9a08-a72113d125a2",
+   "id": "dd85beb8-dda4-4b87-a710-32179611e428",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import faiss\n",
-    "import numpy as np\n",
-    "from transformers import GPT4Model, GPT4Tokenizer\n",
+    "import os\n",
     "\n",
-    "# Load model and tokenizer\n",
-    "tokenizer = GPT4Tokenizer.from_pretrained(\"gpt-4\")\n",
-    "model = GPT4Model.from_pretrained(\"gpt-4\")\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "# Setup FAISS index (example with dummy data)\n",
-    "index = faiss.IndexFlatL2(128)\n",
-    "data = np.random.random((100, 128)).astype(\"float32\")\n",
-    "index.add(data)\n",
+    "load_dotenv()\n",
     "\n",
-    "\n",
-    "def retrieve(query):\n",
-    "    # Convert query to vector and retrieve from index\n",
-    "    query_vector = np.random.random((1, 128)).astype(\"float32\")  # Dummy vector\n",
-    "    D, I = index.search(query_vector, 5)\n",
-    "    return I\n",
-    "\n",
-    "\n",
-    "def generate_response(query, retrieved_docs):\n",
-    "    # Combine query with retrieved documents\n",
-    "    augmented_query = query + \" \" + \" \".join(retrieved_docs)\n",
-    "    inputs = tokenizer(augmented_query, return_tensors=\"pt\")\n",
-    "    outputs = model.generate(**inputs)\n",
-    "    response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-    "    return response\n",
-    "\n",
-    "\n",
-    "# Example usage\n",
-    "query = \"What is the optimal number of packages I can include in the truck?\"\n",
-    "retrieved_docs = retrieve(query)  # Dummy retrieval\n",
-    "response = generate_response(query, retrieved_docs)\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d4abe51-17fb-4ba9-9474-1a32f0565ef9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI(api_key=\"\")  # this is also the default, it can be omitted\n",
-    "\n",
-    "completion = client.completions.create(model=\"curie\")\n",
-    "print(completion.choices[0].text)\n",
-    "print(dict(completion).get(\"usage\"))\n",
-    "print(completion.model_dump_json(indent=2))"
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
@@ -67,7 +22,65 @@
    "id": "8a10cb9c-4d68-4117-8a61-eed797b21376",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(\n",
+    "    # organization=\"org-4qL6pBnYzURfj3ENLY5K23rL\",\n",
+    "    # project=\"proj_0T08PqnrorOAjnlPoy51o7nl\",\n",
+    "    api_key=OPENAI_API_KEY,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1af6d060-2034-4bc1-901b-567452f9031b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL = \"gpt-3.5-turbo\"\n",
+    "response = client.chat.completions.create(\n",
+    "    model=MODEL,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Knock knock.\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"Who's there?\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Orange.\"},\n",
+    "    ],\n",
+    "    temperature=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8cbc6e5-7460-431f-8480-ab482ce369ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.choices[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b782adf-6589-4665-be1a-d940be1ef869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL = \"gpt-3.5-turbo\"\n",
+    "# response = client.chat.completions.create(\n",
+    "    model=MODEL,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Knock knock.\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"Who's there?\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Orange.\"},\n",
+    "    ],\n",
+    "    temperature=0,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
