update example with hugging face

--- a/library_test.ipynb
+++ b/library_test.ipynb
@@ -10,6 +10,8 @@
     "import os\n",
     "\n",
     "from dotenv import load_dotenv\n",
+    "import pandas as pd\n",
+    "from transformers import pipeline\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -26,8 +28,6 @@
     "from openai import OpenAI\n",
     "\n",
     "client = OpenAI(\n",
-    "    # organization=\"org-4qL6pBnYzURfj3ENLY5K23rL\",\n",
-    "    # project=\"proj_0T08PqnrorOAjnlPoy51o7nl\",\n",
     "    api_key=OPENAI_API_KEY,\n",
     ")"
    ]
@@ -49,17 +49,8 @@
     "        {\"role\": \"user\", \"content\": \"Orange.\"},\n",
     "    ],\n",
     "    temperature=0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8cbc6e5-7460-431f-8480-ab482ce369ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response.choices[0]"
+    ")\n",
+    "response"
    ]
   },
   {
@@ -69,18 +60,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL = \"gpt-3.5-turbo\"\n",
-    "# response = client.chat.completions.create(\n",
-    "    model=MODEL,\n",
-    "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Knock knock.\"},\n",
-    "        {\"role\": \"assistant\", \"content\": \"Who's there?\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Orange.\"},\n",
+    "# Sample historical sales data (text format for simplicity)\n",
+    "data = {\n",
+    "    \"date\": [\"2024-01-01\", \"2024-01-02\", \"2024-01-03\", \"2024-01-04\", \"2024-01-05\"],\n",
+    "    \"sales\": [\n",
+    "        \"Sales of 100 units on 2024-01-01\",\n",
+    "        \"Sales of 150 units on 2024-01-02\",\n",
+    "        \"Sales of 200 units on 2024-01-03\",\n",
+    "        \"Sales of 130 units on 2024-01-04\",\n",
+    "        \"Sales of 170 units on 2024-01-05\",\n",
     "    ],\n",
-    "    temperature=0,\n",
-    ")"
+    "}\n",
+    "\n",
+    "# Convert the data to a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(\"Historical Sales Data:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Initialize the text generation pipeline with a pre-trained model\n",
+    "text_generator = pipeline(\"text-generation\", model=\"openai-community/gpt2\", framework=\"pt\", device=0)\n",
+    "\n",
+    "# Generate a forecast for the next day\n",
+    "prompt = \"Based on historical sales data, the expected sales for 2024-01-06 are\"\n",
+    "generated_text = text_generator(prompt, truncation=True, max_length=50, num_return_sequences=1)\n",
+    "\n",
+    "# Print the generated forecast\n",
+    "print(\"\\nGenerated Demand Forecast:\")\n",
+    "print(generated_text[0][\"generated_text\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f88bd489-e53a-4ab9-a564-d77ccbbd979b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
