minor changes and add requirements.txt file

--- a/library_test.ipynb
+++ b/library_test.ipynb
@@ -9,8 +9,8 @@
    "source": [
     "import os\n",
     "\n",
-    "from dotenv import load_dotenv\n",
     "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
     "from transformers import pipeline\n",
     "\n",
     "load_dotenv()\n",
@@ -48,7 +48,9 @@
     "        {\"role\": \"assistant\", \"content\": \"Who's there?\"},\n",
     "        {\"role\": \"user\", \"content\": \"Orange.\"},\n",
     "    ],\n",
-    "    temperature=0,\n",
+    "    # temperature=0.7,\n",
+    "    # max_tokens=64,\n",
+    "    # top_p=1\n",
     ")\n",
     "response"
    ]
@@ -80,11 +82,15 @@
     "print(df)\n",
     "\n",
     "# Initialize the text generation pipeline with a pre-trained model\n",
-    "text_generator = pipeline(\"text-generation\", model=\"openai-community/gpt2\", framework=\"pt\", device=0)\n",
+    "text_generator = pipeline(\n",
+    "    \"text-generation\", model=\"openai-community/gpt2\", framework=\"pt\", device=0\n",
+    ")\n",
     "\n",
     "# Generate a forecast for the next day\n",
     "prompt = \"Based on historical sales data, the expected sales for 2024-01-06 are\"\n",
-    "generated_text = text_generator(prompt, truncation=True, max_length=50, num_return_sequences=1)\n",
+    "generated_text = text_generator(\n",
+    "    prompt, truncation=True, max_length=50, num_return_sequences=1\n",
+    ")\n",
     "\n",
     "# Print the generated forecast\n",
     "print(\"\\nGenerated Demand Forecast:\")\n",
