sample process query using rule-based and langchain

--- a/rag_test.ipynb
+++ b/rag_test.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dd85beb8-dda4-4b87-a710-32179611e428",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
