update langchain to pull info

--- a/logistics_mvp.ipynb
+++ b/logistics_mvp.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "21d8cee4-66a3-4818-a7a0-b8214d2b0bf9",
    "metadata": {},
    "outputs": [],
@@ -87,11 +87,22 @@
     "# Define the prompt template\n",
     "prompt_template = \"\"\"\n",
     "You are an intelligent assistant for a logistics company. Categorize the query and extract relevant information such as the plate number.\n",
+    "Plate number can be in the format ABC 1234 (3 letters followed by 4 numbers). Possible to not have space in between as well.\n",
+    "Query category can be:\n",
+    "1. current_location: asking where a vehicle is located\n",
+    "2. dispatch_time: asking about what time a vehicle left a specified location\n",
+    "3. arrival_time: asking about what time a vehicle arrived at a specific location\n",
+    "Location is a string such as warehouse A. It can also be an ID such as 21.\n",
+    "\n",
+    "It is possible that the query asks about two vehicles or two locations. \n",
+    "In those cases, return multiple responses in the format specified at the end.\n",
+    "\n",
     "Query: {query}\n",
     "\n",
-    "Response:\n",
+    "Format of Response:\n",
     "Query Type: (current_location, dispatch_time, arrival_time, unknown)\n",
     "Plate Number: (if available)\n",
+    "Location: (location)\n",
     "\"\"\"\n",
     "\n",
     "prompt = PromptTemplate(input_variables=[\"query\"], template=prompt_template)\n",
@@ -135,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "62b1ce4b-a5ef-42b3-a8e8-e3cf1d89de5a",
    "metadata": {},
    "outputs": [
@@ -144,21 +155,21 @@
      "output_type": "stream",
      "text": [
       "{'plate_number': 'abc 1234', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n",
-      "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
+      "{'plate_number': 'ABC 1234', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n",
       "{'plate_number': 'abc 1234', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n",
-      "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
+      "{'plate_number': 'ABC 1234', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n",
       "{'plate_number': 'abc 1234', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n",
-      "{'plate_number': 'ABC 1234', 'query_type': None, 'tables_needed': []}\n",
+      "{'plate_number': 'ABC 1234', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n",
       "{'plate_number': 'abc 1234', 'query_type': 'dispatch_time', 'tables_needed': ['movements', 'vehicles']}\n",
-      "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
+      "{'plate_number': 'ABC 1234', 'query_type': 'dispatch_time', 'tables_needed': ['movements', 'vehicles']}\n",
       "{'plate_number': 'abc 1234', 'query_type': 'dispatch_time', 'tables_needed': ['movements', 'vehicles']}\n",
-      "{'plate_number': 'ABC 1234', 'query_type': None, 'tables_needed': []}\n",
+      "{'plate_number': 'ABC 1234', 'query_type': 'dispatch_time', 'tables_needed': ['movements', 'vehicles']}\n",
       "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
-      "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
+      "{'plate_number': 'N/A', 'query_type': 'arrival_time', 'tables_needed': ['locations', 'vehicles', 'movements']}\n",
       "{'plate_number': 'abc 1234', 'query_type': 'arrival_time', 'tables_needed': ['locations', 'vehicles', 'movements']}\n",
+      "{'plate_number': 'ABC 1234', 'query_type': 'arrival_time', 'tables_needed': ['locations', 'vehicles', 'movements']}\n",
       "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
-      "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n",
-      "{'plate_number': None, 'query_type': None, 'tables_needed': []}\n"
+      "{'plate_number': 'N/A', 'query_type': 'current_location', 'tables_needed': ['movements', 'vehicles']}\n"
      ]
     }
    ],
