add postgres connection

--- a/logistics_mvp.ipynb
+++ b/logistics_mvp.ipynb
@@ -190,8 +190,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1e230c4c-99b6-4d95-9e2d-b395b7503106",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  platenumber       type           createdat            editedat\n",
+      "0      ABC123      truck 2024-01-01 10:00:00 2024-01-01 10:00:00\n",
+      "1      DEF456        car 2024-02-01 11:00:00 2024-02-01 11:00:00\n",
+      "2      GHI789  motorbike 2024-03-01 12:00:00 2024-03-01 12:00:00\n",
+      "3      JKL012      truck 2024-04-01 13:00:00 2024-04-01 13:00:00\n",
+      "4      MNO345        car 2024-05-01 14:00:00 2024-05-01 14:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "POSTGRES_URI = os.getenv(\"POSTGRES_URI\")\n",
+    "\n",
+    "# Create a database engine\n",
+    "engine = create_engine(POSTGRES_URI)\n",
+    "\n",
+    "# Create a query\n",
+    "query = \"SELECT * FROM vehicles limit 5\"\n",
+    "\n",
+    "# Execute the query and fetch the results into a pandas DataFrame\n",
+    "df = pd.read_sql_query(query, engine)\n",
+    "\n",
+    "# Close the database engine\n",
+    "engine.dispose()\n",
+    "\n",
+    "# Display the results\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9af1496e-d44f-407d-b8c0-5d0a9ea267de",
    "metadata": {},
    "outputs": [],
    "source": []
