format with headers

--- a/logistics_mvp.ipynb
+++ b/logistics_mvp.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8cedd6a2-0ee1-4011-a8f5-ee17febe4be2",
+   "metadata": {},
+   "source": [
+    "### Shared Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "id": "d5663cab-4d66-4e19-9d8a-5996c73c251f",
@@ -13,6 +21,16 @@
     "    # Convert all characters to uppercase\n",
     "    s_upper = s_no_spaces.upper()\n",
     "    return s_upper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "840d0adc-3eaa-47a9-910f-e0f4433747aa",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Prompt Engineering: Rule-based"
    ]
   },
   {
@@ -83,6 +101,16 @@
     "        \"query_type\": None,\n",
     "        \"location\": None,\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4bb6ef3-efeb-4a0e-b260-747cb587336f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Prompt Engineering: Use of LangChain"
    ]
   },
   {
@@ -168,6 +196,16 @@
     "        \"location\": location,\n",
     "        \"query_type\": query_type,\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a84955-61f5-420d-9143-e6ae5a8b4989",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Retrieval-Augmented Generation (RAG): Retrieve info from Postgres"
    ]
   },
   {
@@ -267,6 +305,14 @@
     "        \"vehicle_coordinates\": vehicle_coordinates,\n",
     "        \"location_coordinates\": location_coordinates,\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68366747-9dd3-4e59-8f86-3ee9b813b2c4",
+   "metadata": {},
+   "source": [
+    "### End-to-end Run"
    ]
   },
   {
