--- a/logistics_mvp.ipynb
+++ b/logistics_mvp.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "8cedd6a2-0ee1-4011-a8f5-ee17febe4be2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Shared Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "d5663cab-4d66-4e19-9d8a-5996c73c251f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "c5889ea9-6165-47b6-b495-9b4e255e5744",
    "metadata": {
     "editable": true,
@@ -49,7 +51,7 @@
     "import re\n",
     "\n",
     "\n",
-    "def process_query(query):\n",
+    "def process_query_rules(query):\n",
     "    plate_number = None\n",
     "    location = None\n",
     "\n",
@@ -92,14 +94,14 @@
     "\n",
     "                return {\n",
     "                    \"plate_number\": plate_number,\n",
-    "                    \"query_type\": query_type,\n",
     "                    \"location\": location,\n",
+    "                    \"query_type\": query_type,\n",
     "                }\n",
     "\n",
     "    return {\n",
     "        \"plate_number\": None,\n",
-    "        \"query_type\": None,\n",
     "        \"location\": None,\n",
+    "        \"query_type\": None,\n",
     "    }"
    ]
   },
@@ -115,10 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "21d8cee4-66a3-4818-a7a0-b8214d2b0bf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ryanabis/projects/ai-sampler/myenv/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
+      "  warn_deprecated(\n",
+      "/Users/ryanabis/projects/ai-sampler/myenv/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "id": "1e230c4c-99b6-4d95-9e2d-b395b7503106",
    "metadata": {},
    "outputs": [],
@@ -281,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "id": "9af1496e-d44f-407d-b8c0-5d0a9ea267de",
    "metadata": {},
    "outputs": [],
@@ -309,15 +322,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68366747-9dd3-4e59-8f86-3ee9b813b2c4",
+   "id": "1b81eee0-d862-4700-b2b3-11fa09d2504a",
    "metadata": {},
    "source": [
-    "### End-to-end Run"
+    "### Generating Response with GPT3/4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
+   "id": "2ea6c6c2-8ecb-412a-aeb8-0cf456b0ddc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_response(query):\n",
+    "    return query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68366747-9dd3-4e59-8f86-3ee9b813b2c4",
+   "metadata": {},
+   "source": [
+    "### Difference in Prompt Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "23b7d423-902c-4b16-b717-80f96ca4d526",
    "metadata": {},
    "outputs": [
@@ -325,71 +357,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'vehicle_coordinates':     movementid platenumber                  createdat  \\\n",
-      "0           32      ABC123 2024-07-26 11:31:37.386905   \n",
-      "1           31      ABC123 2024-07-26 11:21:37.386905   \n",
-      "2           30      ABC123 2024-07-26 11:11:37.386905   \n",
-      "3           29      ABC123 2024-07-26 11:01:37.386905   \n",
-      "4           28      ABC123 2024-07-26 10:51:37.386905   \n",
-      "5           27      ABC123 2024-07-26 10:41:37.386905   \n",
-      "6           26      ABC123 2024-07-26 10:31:37.386905   \n",
-      "7           25      ABC123 2024-07-26 10:21:37.386905   \n",
-      "8           24      ABC123 2024-07-26 10:11:37.386905   \n",
-      "9           23      ABC123 2024-07-26 10:01:37.386905   \n",
-      "10          22      ABC123 2024-07-26 09:51:37.386905   \n",
-      "11          21      ABC123 2024-07-26 09:41:37.386905   \n",
-      "12          20      ABC123 2024-07-26 09:31:37.386905   \n",
-      "13          19      ABC123 2024-07-26 09:21:37.386905   \n",
-      "14          18      ABC123 2024-07-26 09:11:37.386905   \n",
-      "15          17      ABC123 2024-07-26 09:01:37.386905   \n",
-      "16          16      ABC123 2024-07-26 08:51:37.386905   \n",
-      "17          15      ABC123 2024-07-26 08:41:37.386905   \n",
-      "18          14      ABC123 2024-07-26 08:31:37.386905   \n",
-      "19          13      ABC123 2024-07-26 08:21:37.386905   \n",
-      "20          12      ABC123 2024-07-26 08:11:37.386905   \n",
-      "21          11      ABC123 2024-07-26 08:01:37.386905   \n",
-      "22          10      ABC123 2024-07-26 07:51:37.386905   \n",
-      "23           9      ABC123 2024-07-26 07:41:37.386905   \n",
-      "24           8      ABC123 2024-07-26 07:31:37.386905   \n",
-      "25           7      ABC123 2024-07-26 07:21:37.386905   \n",
-      "26           6      ABC123 2024-07-26 07:11:37.386905   \n",
-      "27           5      ABC123 2024-07-26 07:01:37.386905   \n",
-      "28           4      ABC123 2024-07-26 06:51:37.386905   \n",
-      "29           3      ABC123 2024-07-26 06:41:37.386905   \n",
-      "\n",
-      "                                          coordinates  \n",
-      "0   0101000020E6100000CCEEC9C3423D5E40B6AF03E78C28...  \n",
-      "1   0101000020E6100000E4394875273D5E407508F672B227...  \n",
-      "2   0101000020E6100000FC84C6260C3D5E403461E8FED726...  \n",
-      "3   0101000020E610000014D044D8F03C5E40F4B9DA8AFD25...  \n",
-      "4   0101000020E61000002B1BC389D53C5E40B312CD162325...  \n",
-      "5   0101000020E61000004366413BBA3C5E40726BBFA24824...  \n",
-      "6   0101000020E61000005BB1BFEC9E3C5E4031C4B12E6E23...  \n",
-      "7   0101000020E610000073FC3D9E833C5E40F01CA4BA9322...  \n",
-      "8   0101000020E61000008B47BC4F683C5E40B0759646B921...  \n",
-      "9   0101000020E6100000A2923A014D3C5E406FCE88D2DE20...  \n",
-      "10  0101000020E6100000BADDB8B2313C5E402E277B5E0420...  \n",
-      "11  0101000020E6100000D2283764163C5E40ED7F6DEA291F...  \n",
-      "12  0101000020E6100000EA73B515FB3B5E40ACD85F764F1E...  \n",
-      "13  0101000020E610000002BF33C7DF3B5E406C315202751D...  \n",
-      "14  0101000020E61000001A0AB278C43B5E402B8A448E9A1C...  \n",
-      "15  0101000020E61000003255302AA93B5E40EAE2361AC01B...  \n",
-      "16  0101000020E610000049A0AEDB8D3B5E40A93B29A6E51A...  \n",
-      "17  0101000020E610000061EB2C8D723B5E4068941B320B1A...  \n",
-      "18  0101000020E61000007936AB3E573B5E4028ED0DBE3019...  \n",
-      "19  0101000020E6100000918129F03B3B5E40E745004A5618...  \n",
-      "20  0101000020E6100000A9CCA7A1203B5E40A69EF2D57B17...  \n",
-      "21  0101000020E6100000C0172653053B5E4065F7E461A116...  \n",
-      "22  0101000020E6100000D862A404EA3A5E402450D7EDC615...  \n",
-      "23  0101000020E6100000F0AD22B6CE3A5E40E4A8C979EC14...  \n",
-      "24  0101000020E610000008F9A067B33A5E40A301BC051214...  \n",
-      "25  0101000020E610000020441F19983A5E40625AAE913713...  \n",
-      "26  0101000020E6100000388F9DCA7C3A5E4021B3A01D5D12...  \n",
-      "27  0101000020E610000050DA1B7C613A5E40E00B93A98211...  \n",
-      "28  0101000020E610000067259A2D463A5E40A0648535A810...  \n",
-      "29  0101000020E61000007F7018DF2A3A5E405FBD77C1CD0F...  , 'location_coordinates': Empty DataFrame\n",
-      "Columns: [coordinates]\n",
-      "Index: []}\n"
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ryanabis/projects/ai-sampler/myenv/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI: {'plate_number': 'ABC123', 'location': None, 'query_type': 'current_location'}\n",
+      "RULES: {'plate_number': 'ABC123', 'location': None, 'query_type': 'current_location'}\n",
+      "1\n",
+      "AI: {'plate_number': 'ABC1234', 'location': None, 'query_type': 'current_location'}\n",
+      "RULES: {'plate_number': 'ABC1234', 'location': None, 'query_type': 'current_location'}\n"
      ]
     }
    ],
@@ -397,21 +384,52 @@
     "# Example queries\n",
     "queries = [\n",
     "    \"Where is vehicle ABC 123?\",\n",
-    "    # \"What is the current location of vehicle ABC 1234?\",\n",
+    "    \"What is the current location of vehicle ABC 1234?\",\n",
     "    # \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
     "    # \"What time did vehicle ABC123 arrive in Location 2?\",\n",
     "    # \"Where is it location?\",\n",
     "]\n",
     "\n",
-    "for query in queries:\n",
-    "    processed_query = process_query_langchain(query)\n",
-    "    print(retrieve_db(processed_query))"
+    "for index, query in enumerate(queries):\n",
+    "    print(index)\n",
+    "    print(\"AI:\", process_query_langchain(query))\n",
+    "    print(\"RULES:\", process_query_rules(query))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b7ecc90-bd6e-4eca-93b1-6e723d2c0554",
+   "metadata": {},
+   "source": [
+    "### End-to-end Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "19b26857-347a-4ac8-b8c0-f98a58548d7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example queries\n",
+    "queries = [\n",
+    "    \"Where is vehicle ABC 123?\",\n",
+    "    \"What is the current location of vehicle ABC 1234?\",\n",
+    "    # \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
+    "    # \"What time did vehicle ABC123 arrive in Location 2?\",\n",
+    "    # \"Where is it location?\",\n",
+    "]\n",
+    "\n",
+    "for index, query in enumerate(queries):\n",
+    "    # processed_query = process_query_langchain(query)\n",
+    "    # relevant_db = retrieve_db(processed_query)\n",
+    "    response = generate_response(query)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7323e060-a365-4953-89f6-6b68fe557d0a",
+   "id": "8a823c4b-b643-47fb-8479-478351e56c99",
    "metadata": {},
    "outputs": [],
    "source": []
