example of end to end run

--- a/logistics_mvp.ipynb
+++ b/logistics_mvp.ipynb
@@ -323,20 +323,96 @@
   {
    "cell_type": "markdown",
    "id": "1b81eee0-d862-4700-b2b3-11fa09d2504a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Generating Response with GPT3/4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "2ea6c6c2-8ecb-412a-aeb8-0cf456b0ddc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_response(query):\n",
-    "    return query"
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(\n",
+    "    api_key=OPENAI_API_KEY,\n",
+    ")\n",
+    "\n",
+    "MODEL = \"gpt-3.5-turbo\"\n",
+    "\n",
+    "system_from_query_type = {\n",
+    "    \"current_location\": \"User will ask where a vehicle is located. You will be given a plate number and a list of its coordinates with different timestamps.\",\n",
+    "    \"dispatch_time\": \"User will ask what time vehicle left a particular location.\",\n",
+    "    \"arrival_time\": \"User will ask what time vehicle arrived at a particular location.\",\n",
+    "}\n",
+    "\n",
+    "query_from_query_type = {\n",
+    "    \"current_location\": \"What is the current location of this vehicle?\",\n",
+    "    \"dispatch_time\": \"What time did this vehicle leave a particular location?\",\n",
+    "    \"arrival_time\": \"What time did this vehicle arrive a particular location?\",\n",
+    "}\n",
+    "\n",
+    "context_from_query_type = {\n",
+    "    \"current_location\": \"\"\"\n",
+    "    You can get current location by looking at the row of the vehicle with the most recent createdat date.\n",
+    "    Afterewards, you use the column called coordinates of that row. That's the current location of the vehicle.\n",
+    "    Convert the coordinates into a longitude and latitude response.\n",
+    "    \"\"\",\n",
+    "    \"dispatch_time\": \"\"\"\n",
+    "    What time did this vehicle leave a particular location?\n",
+    "    \"\"\",\n",
+    "    \"arrival_time\": \"\"\"\n",
+    "    What time did this vehicle arrive a particular location?\n",
+    "    \"\"\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def generate_response(processed_query, relevant_db):\n",
+    "    system_message = f\"\"\"\n",
+    "    You are an assistant assisting with queries on fleet management. \n",
+    "    You are very concise with your responses. \n",
+    "    Typically just 1-2 sentences.\n",
+    "    {system_from_query_type[processed_query[\"query_type\"]]}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    location_string = (\n",
+    "        f\"\"\"\n",
+    "    Location in question is {processed_query[\"location\"]}.\n",
+    "    Its geofence is {relevant_db[\"location_coordinates\"]}\n",
+    "    \"\"\"\n",
+    "        if processed_query[\"location\"] is not None\n",
+    "        else \"\"\n",
+    "    )\n",
+    "\n",
+    "    user_message = f\"\"\"\n",
+    "    Question: {query_from_query_type[processed_query[\"query_type\"]]}\n",
+    "    Context: Vehicle is {processed_query[\"plate_number\"]}.\n",
+    "    Its coordinates are {relevant_db[\"vehicle_coordinates\"]}.\n",
+    "    The platenumber column should match the vehicle in question.\n",
+    "    Each coordinate has a column called createdat.\n",
+    "    {context_from_query_type[processed_query[\"query_type\"]]}\n",
+    "    {location_string}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=MODEL,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_message},\n",
+    "            {\"role\": \"user\", \"content\": user_message},\n",
+    "            # {\"role\": \"assistant\", \"content\": \"Who's there?\"},\n",
+    "            # {\"role\": \"user\", \"content\": \"Orange.\"},\n",
+    "        ],\n",
+    "        temperature=0.7,\n",
+    "        max_tokens=64,\n",
+    "        top_p=1,\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -406,30 +482,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "19b26857-347a-4ac8-b8c0-f98a58548d7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current location of vehicle ABC123 is latitude 40.7128, longitude -74.0060.\n",
+      "The vehicle ABC123 left LOCATION 1 at 2024-07-26 07:01:37.386905.\n"
+     ]
+    }
+   ],
    "source": [
     "# Example queries\n",
     "queries = [\n",
     "    \"Where is vehicle ABC 123?\",\n",
-    "    \"What is the current location of vehicle ABC 1234?\",\n",
-    "    # \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
+    "    # \"What is the current location of vehicle ABC 1234?\",\n",
+    "    \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
     "    # \"What time did vehicle ABC123 arrive in Location 2?\",\n",
-    "    # \"Where is it location?\",\n",
     "]\n",
     "\n",
     "for index, query in enumerate(queries):\n",
-    "    # processed_query = process_query_langchain(query)\n",
-    "    # relevant_db = retrieve_db(processed_query)\n",
-    "    response = generate_response(query)"
+    "    processed_query = process_query_langchain(query)\n",
+    "    relevant_db = retrieve_db(processed_query)\n",
+    "    response = generate_response(processed_query, relevant_db)\n",
+    "    print(response)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a823c4b-b643-47fb-8479-478351e56c99",
+   "id": "8d89b031-fa9d-4f56-bcf3-33616095a9f0",
    "metadata": {},
    "outputs": [],
    "source": []
