don't process unknown plate number

--- a/logistics_mvp.ipynb
+++ b/logistics_mvp.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "2ea6c6c2-8ecb-412a-aeb8-0cf456b0ddc2",
    "metadata": {},
    "outputs": [],
@@ -373,6 +373,9 @@
     "\n",
     "\n",
     "def generate_response(processed_query, relevant_db):\n",
+    "    if relevant_db is None:\n",
+    "        return f\"Vehicle {processed_query['plate_number']} is not registered.\"\n",
+    "\n",
     "    system_message = f\"\"\"\n",
     "    You are an assistant assisting with queries on fleet management. \n",
     "    You are very concise with your responses. \n",
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "23b7d423-902c-4b16-b717-80f96ca4d526",
    "metadata": {},
    "outputs": [
@@ -433,26 +436,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ryanabis/projects/ai-sampler/myenv/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0 :  Where is vehicle ABC 123?\n",
       "AI: {'plate_number': 'ABC123', 'location': None, 'query_type': 'current_location'}\n",
       "RULES: {'plate_number': 'ABC123', 'location': None, 'query_type': 'current_location'}\n",
-      "1\n",
+      "\n",
+      "\n",
+      "1 :  What is the current location of vehicle ABC 1234?\n",
       "AI: {'plate_number': 'ABC1234', 'location': None, 'query_type': 'current_location'}\n",
-      "RULES: {'plate_number': 'ABC1234', 'location': None, 'query_type': 'current_location'}\n"
+      "RULES: {'plate_number': 'ABC1234', 'location': None, 'query_type': 'current_location'}\n",
+      "\n",
+      "\n",
+      "2 :  What time was vehicle ABC 123 dispatched from Location 1?\n",
+      "AI: {'plate_number': 'ABC123', 'location': 'LOCATION 1', 'query_type': 'dispatch_time'}\n",
+      "RULES: {'plate_number': 'ABC123DISPATCHEDFROM', 'location': None, 'query_type': 'current_location'}\n",
+      "\n",
+      "\n",
+      "3 :  What time did vehicle ABC123 arrive in Location 2?\n",
+      "AI: {'plate_number': 'ABC123', 'location': 'LOCATION 2', 'query_type': 'arrival_time'}\n",
+      "RULES: {'plate_number': 'ABC123ARRIVEIN', 'location': None, 'query_type': 'current_location'}\n",
+      "\n",
+      "\n",
+      "4 :  At what hour did the truck with plate number XYZ123 leave the QC Warehouse?\n",
+      "AI: {'plate_number': 'XYZ123', 'location': 'QC WAREHOUSE', 'query_type': 'dispatch_time'}\n",
+      "RULES: {'plate_number': None, 'location': None, 'query_type': None}\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -461,15 +469,16 @@
     "queries = [\n",
     "    \"Where is vehicle ABC 123?\",\n",
     "    \"What is the current location of vehicle ABC 1234?\",\n",
-    "    # \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
-    "    # \"What time did vehicle ABC123 arrive in Location 2?\",\n",
-    "    # \"Where is it location?\",\n",
+    "    \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
+    "    \"What time did vehicle ABC123 arrive in Location 2?\",\n",
+    "    \"At what hour did the truck with plate number XYZ123 leave the QC Warehouse?\",\n",
     "]\n",
     "\n",
     "for index, query in enumerate(queries):\n",
-    "    print(index)\n",
+    "    print(index, \": \", query)\n",
     "    print(\"AI:\", process_query_langchain(query))\n",
-    "    print(\"RULES:\", process_query_rules(query))"
+    "    print(\"RULES:\", process_query_rules(query))\n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -482,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "19b26857-347a-4ac8-b8c0-f98a58548d7a",
    "metadata": {},
    "outputs": [
@@ -490,8 +499,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current location of vehicle ABC123 is latitude 40.7128, longitude -74.0060.\n",
-      "The vehicle ABC123 left LOCATION 1 at 2024-07-26 07:01:37.386905.\n"
+      "The current location of the vehicle with plate number ABC123 is latitude: 40.7128, longitude: -74.0060.\n",
+      "Vehicle ABC1234 is not registered.\n",
+      "The vehicle with plate number ABC123 left LOCATION 1 at 2024-07-26 06:41:37.386905.\n",
+      "The vehicle ABC123 arrived at LOCATION 2 at 2024-07-26 11:11:37.386905.\n"
      ]
     }
    ],
@@ -499,9 +510,9 @@
     "# Example queries\n",
     "queries = [\n",
     "    \"Where is vehicle ABC 123?\",\n",
-    "    # \"What is the current location of vehicle ABC 1234?\",\n",
+    "    \"What is the current location of vehicle ABC 1234?\",\n",
     "    \"What time was vehicle ABC 123 dispatched from Location 1?\",\n",
-    "    # \"What time did vehicle ABC123 arrive in Location 2?\",\n",
+    "    \"What time did vehicle ABC123 arrive in Location 2?\",\n",
     "]\n",
     "\n",
     "for index, query in enumerate(queries):\n",
